add auth routes
